tests/baselines/reference/typeParametersShouldNotBeEqual3.errors.txt
tests/cases/compiler/typeParametersShouldNotBeEqual3.ts(4,5): error TS2322: Type 'U' is not assignable to type 'T'.
  'U' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Object'.
    Type 'Object' is not assignable to type 'T'.
      'Object' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Object'.
        The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?
tests/cases/compiler/typeParametersShouldNotBeEqual3.ts(5,5): error TS2322: Type 'Object' is not assignable to type 'T'.
  'Object' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Object'.
    The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?


==== tests/cases/compiler/typeParametersShouldNotBeEqual3.ts (2 errors) ====
    function ff<T extends Object, U extends Object>(x: T, y: U) {
        var z: Object;
        x = x;  // Ok
        x = y;  // Ok
        ~
!!! error TS2322: Type '{|U|0|}' is not assignable to type '{|T|1|}'.
!!! error TS2322:   '{|U|2|}' is assignable to the constraint of type '{|T|3|}', but '{|T|4|}' could be instantiated with a different subtype of constraint '{|Object|5|}'.
!!! error TS2322:     Type '{|Object|6|}' is not assignable to type '{|T|7|}'.
!!! error TS2322:       '{|Object|8|}' is assignable to the constraint of type '{|T|9|}', but '{|T|10|}' could be instantiated with a different subtype of constraint '{|Object|11|}'.
!!! error TS2322:         The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?
!!! annotated symbol 0 tests/cases/compiler/typeParametersShouldNotBeEqual3.ts:1:31
!!! annotated symbol 1 tests/cases/compiler/typeParametersShouldNotBeEqual3.ts:1:13
!!! annotated symbol 2 tests/cases/compiler/typeParametersShouldNotBeEqual3.ts:1:31
!!! annotated symbol 3 tests/cases/compiler/typeParametersShouldNotBeEqual3.ts:1:13
!!! annotated symbol 4 tests/cases/compiler/typeParametersShouldNotBeEqual3.ts:1:13
!!! annotated symbol 5 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 6 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 7 tests/cases/compiler/typeParametersShouldNotBeEqual3.ts:1:13
!!! annotated symbol 8 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 9 tests/cases/compiler/typeParametersShouldNotBeEqual3.ts:1:13
!!! annotated symbol 10 tests/cases/compiler/typeParametersShouldNotBeEqual3.ts:1:13
!!! annotated symbol 11 /.ts/lib.es5.d.ts:120:11
        x = z;  // Ok
        ~
!!! error TS2322: Type '{|Object|0|}' is not assignable to type '{|T|1|}'.
!!! error TS2322:   '{|Object|2|}' is assignable to the constraint of type '{|T|3|}', but '{|T|4|}' could be instantiated with a different subtype of constraint '{|Object|5|}'.
!!! error TS2322:     The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?
!!! annotated symbol 0 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 1 tests/cases/compiler/typeParametersShouldNotBeEqual3.ts:1:13
!!! annotated symbol 2 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 3 tests/cases/compiler/typeParametersShouldNotBeEqual3.ts:1:13
!!! annotated symbol 4 tests/cases/compiler/typeParametersShouldNotBeEqual3.ts:1:13
!!! annotated symbol 5 /.ts/lib.es5.d.ts:120:11
        z = x;  // Ok
    }
    